SET(CACHEDB
    "${PROJECT_SOURCE_DIR}/src/cachedb/CacheDB.h"
    "${PROJECT_SOURCE_DIR}/src/cachedb/CacheDB.cpp"
    "${PROJECT_SOURCE_DIR}/src/cachedb/main.cpp"
    )

SOURCE_GROUP(interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP(API FILES ${API})
SOURCE_GROUP(public\\tinyxml FILES ${PUBLIC_XML})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(\\ FILES ${CACHEDB})

ADD_LIBRARY(CacheDB SHARED
        ${CACHEDB}
        ${API}
        ${LOGIC_INTERFACE}
        ${PUBLIC}
        ${PUBLIC_XML}
        )

IF(WIN32)
TARGET_LINK_LIBRARIES(CacheDB
	"${PROJECT_SOURCE_DIR}/thirdlibary/bin/$<CONFIGURATION>/serverd.lib"
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(CacheDB PROPERTIES FOLDER "core")
