SET(SAVE
    "${PROJECT_SOURCE_DIR}/src/save/Save.h"
    "${PROJECT_SOURCE_DIR}/src/save/Save.cpp"
    "${PROJECT_SOURCE_DIR}/src/save/main.cpp"
    )

SOURCE_GROUP(interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP(API FILES ${API})
SOURCE_GROUP(public\\tinyxml FILES ${PUBLIC_XML})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(\\ FILES ${SAVE})

ADD_LIBRARY(Save SHARED
        ${SAVE}
        ${API}
        ${LOGIC_INTERFACE}
        ${PUBLIC}
        ${PUBLIC_XML}
        )

IF(WIN32)
TARGET_LINK_LIBRARIES(Save
	"${PROJECT_SOURCE_DIR}/thirdlibary/bin/$<CONFIGURATION>/serverd.lib"
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(Save PROPERTIES FOLDER "core")