SET(FSM
    "${PROJECT_SOURCE_DIR}/src/fsm/FSM.h"
    "${PROJECT_SOURCE_DIR}/src/fsm/FSM.cpp"
    "${PROJECT_SOURCE_DIR}/src/fsm/ObjectFsm.h"
    "${PROJECT_SOURCE_DIR}/src/fsm/ObjectFsm.cpp"
    "${PROJECT_SOURCE_DIR}/src/fsm/main.cpp"
    )

SOURCE_GROUP(interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP(API FILES ${API})
SOURCE_GROUP(public\\tinyxml FILES ${PUBLIC_XML})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(\\ FILES ${FSM})

ADD_LIBRARY(FSM SHARED
	${FSM}
	${API}
	${LOGIC_INTERFACE}
	${PUBLIC}
	${PUBLIC_XML}
	)

IF(WIN32)
TARGET_LINK_LIBRARIES(FSM
	"${PROJECT_SOURCE_DIR}/thirdlibary/bin/$<CONFIGURATION>/serverd.lib"
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(FSM PROPERTIES FOLDER "framework")
